--- a/Kopigrad/Components/App.razor
+++ b/Kopigrad/Components/App.razor
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="~/orders.css?v=1.0.1" />
     <link rel="stylesheet" href="~/cardsvisit.css?v=1.0.1" />
     <link rel="stylesheet" href="~/staticStyle.css?v=1.0.1" />
-
+    <link rel="stylesheet" href="~/autStyle.css?v=1.0.1" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Open+Sans&family=Lato&family=Montserrat&display=swap"
           rel="stylesheet" />
 
