--- a/Kopigrad/Components/Layout/Admin/AdminListMenu.razor
+++ b/Kopigrad/Components/Layout/Admin/AdminListMenu.razor
@@ -2,12 +2,13 @@
 @inject NavigationManager Navigation
 
 <div class="TextContainerMenuAdmin">
-    <h5 @onclick="Servise" class="TextMenu">Услуги</h5>
-    <h5 @onclick="Material" class="TextMenu">Материалы</h5>
-    <h5 @onclick="Requst" class="TextMenu">Заявки</h5>
-    <h5 @onclick="Pdf" class="TextMenu">PDF расчет</h5>
-    <h5 @onclick="Static" class="TextMenu">Статистика</h5>
-    <h5 @onclick="Files" class="TextMenu">Управление файлами</h5>
+    <h5 @onclick="Servise" class="TextMenu" style="margin: 0 2vw;">Услуги</h5>
+    <h5 @onclick="Material" class="TextMenu" style="margin: 0 2vw;">Материалы</h5>
+    <h5 @onclick="Requst" class="TextMenu" style="margin: 0 2vw;">Заявки</h5>
+    <h5 @onclick="Pdf" class="TextMenu" style="margin: 0 2vw;">PDF расчет</h5>
+    <h5 @onclick="Static" class="TextMenu" style="margin: 0 2vw;">Статистика</h5>
+    <h5 @onclick="Files" class="TextMenu" style="margin: 0 2vw;">Управление файлами</h5>
+    <h5 @onclick="Exit" class="TextMenu" style="margin: 0 2vw;">Выйти</h5>
 </div>
 
 @code{
@@ -40,5 +41,10 @@
     public void Files()
     {
         Navigation.NavigateTo("/FileManager");
+    }
+
+    public void Exit()
+    {
+        Navigation.NavigateTo("/doLogout", forceLoad: true);
     }
 }
