--- a/Kopigrad/Components/Pages/User/CreateRequest.razor
+++ b/Kopigrad/Components/Pages/User/CreateRequest.razor
@@ -12,6 +12,7 @@
     <head>
         <link rel="stylesheet" href="/users.css">
         <link rel="stylesheet" href="/admin.css">
+        <link rel="stylesheet" href="/autStyle.css">
     </head>
 
 
