работает pdf для димлома

--- a/Kopigrad/Components/Layout/Admin/AdminListMenu.razor
+++ b/Kopigrad/Components/Layout/Admin/AdminListMenu.razor
@@ -4,7 +4,7 @@
 <div class="TextContainerMenuAdmin">
     <h5 @onclick="Servise" class="TextMenu" style="margin: 0 2vw;">Услуги</h5>
     <h5 @onclick="Material" class="TextMenu" style="margin: 0 2vw;">Материалы</h5>
-    <h5 @onclick="Requst" class="TextMenu" style="margin: 0 2vw;">Заявки</h5>
+    <h5 @onclick="Requst" class="TextMenu" style="margin: 0 2vw;">Заказы</h5>
     <h5 @onclick="Pdf" class="TextMenu" style="margin: 0 2vw;">PDF расчет</h5>
     <h5 @onclick="Static" class="TextMenu" style="margin: 0 2vw;">Статистика</h5>
     <h5 @onclick="Files" class="TextMenu" style="margin: 0 2vw;">Управление файлами</h5>
