--- a/Kopigrad/Components/Pages/User/MainUsers.razor
+++ b/Kopigrad/Components/Pages/User/MainUsers.razor
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<div class="DivSenter">
+@* <div class="DivSenter">
     <div style="width:560px;height:800px;overflow:hidden;position:relative; text-align: center;">
         <iframe style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box"
                 src="https://yandex.ru/maps-reviews-widget/191955890671?comments"></iframe>
@@ -50,7 +50,7 @@ overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space
         </a>
     </div>
 </div>
-
+ *@
 
 
 
