--- a/Kopigrad/Components/Pages/Admin/Service/Service.razor
+++ b/Kopigrad/Components/Pages/Admin/Service/Service.razor
@@ -11,7 +11,7 @@
 @inject AuthenticationStateProvider AuthStateProvider
 @inject IHttpContextAccessor HttpContextAccessor
 @inject NavigationManager Navigation
-
+@rendermode InteractiveServer
 <PageTitle>Услуги</PageTitle>
 
 <head>
